<resources>

    <string name="app_name">通用播放器</string>
    <string name="app_title">通用网络播放器</string>  
    <string name="video_connection">连接中&#8230;</string>
    <string name="rtsp_hint">rtsp://host:port/hank.sdp</string>
    <string name="camear_opening">打开摄像头&#8230;</string>
    <string name="camera_photograph">拍照</string>
    <string name="list_media_no">没有找到视频源！</string>
    <string name="settings">Settings</string>
    
    <string name="settings_play">播放设置</string>
    
    <string name="set_cancel">取消</string> 
    <string name="set_ok">确定</string>
    <string name="set_server_url">远程播放地址</string>  
    <string name="set_server_url_desc">实时直播网址或本地文件，兼容大多数网络流</string>    
    <string name="set_play_repeat">重复播放文件</string>  
    <string name="set_play_repeat_desc">文件播放结束后，循环从头开始播放</string> 
      
    <string name="ic_exit">Exit client</string>
    <string name="app_copyright">&#169; 2016 hnjhn.com</string>
    <string name="video_error">无法播放视频</string>
    <string name="time">00:00:00</string>
    <string name="camera_photograph_ok">恭喜，抓拍画面成功！</string>
    <string name="camera_photograph_fail">提示，没有成功抓拍画面！</string>

</resources>