<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include layout="@layout/activity_dlg_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="10dip" >

        <!-- 1 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="12dip"
            android:background="@android:color/transparent" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/edit_bottom_line"
            android:ems="10"
            android:hint="@null"
            android:inputType="text"
            android:textColor="@color/user_list_item_color" >
            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/set_server_url_desc"
            android:textColor="#ff999999"
            android:textSize="14sp" />

        <!-- 2 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/list_edit_item"
            android:clickable="true"
            android:paddingBottom="1dip"
            android:paddingLeft="8dip"
            android:paddingRight="6dip"
            android:paddingTop="1dip" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/set_play_repeat"
                android:textColor="@color/user_list_item_color"
                android:textSize="@dimen/user_list_item_font" />

            <com.hnjhn.player.ui.SwitchButton
                android:id="@+id/btn_file_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/set_play_repeat_desc"
            android:textColor="#ff999999"
            android:textSize="14sp" />

        <!-- 3 -->
        <!-- TODO -->
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/app_copyright"
        android:layout_width="match_parent"
        android:layout_height="20dip"
        android:gravity="center"
        android:layout_marginBottom="10dip"
        android:text="@string/app_copyright"
        android:textColor="#FFAAAAAA"
        android:textSize="12sp" />
</LinearLayout>